--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ footer{
 <div class="section-title"><h3>About Us</h3></div>
 <p style="text-align:center">Cozy cafe, fresh food, happy people.
 We serve the best food with delicious taste and good vibes 
- perfect for personal time and and birthday celebration</p>
+ perfect for personal time and birthday celebration</p>
 </section>
 
 <section id="contact">
@@ -335,3 +335,4 @@ function sendWhatsAppOrder(){
 </body>
 
 </html>
+
