--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@ We serve the best food with delicious taste and good vibes
 <section id="contact">
 <div class="section-title"><h3>Contact</h3></div>
 <p style="text-align:center">📞 8605463560</p>
-<p style="text-align:center">Delight Cafe Swami Chincholi📍
-<p style="text-align:center">AKASH GUNAWARE AND CO.</p>
+<p style="text-align:center">Delight Cafe PUNE📍
+<p style="text-align:center">TANN AND CO.</p>
 </section>
 
 <footer>© 2022 Delight Cafe | All Rights Reserved</footer>
@@ -335,4 +335,5 @@ function sendWhatsAppOrder(){
 </body>
 
 </html>
+
 
